# VaultKeeper

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  justfile  lefthook.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml  deploy.yml  release.yml
apps/desktop/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/command/: CommandPalette.tsx
apps/desktop/src/components/editor/: EditorArea.tsx  EditorToolbar.tsx  EmptyState.tsx  NoteEditor.tsx  TabBar.tsx
apps/desktop/src/hooks/: useKeyboardShortcuts.ts
apps/desktop/src/stores/: command.ts  editor.ts  sidebar.ts  sync.ts  theme.ts  vault.ts
apps/desktop/src/styles/: globals.css
apps/desktop/src/utils/: commands.ts  markdown.ts
apps/mobile/: package.json  tsconfig.json
apps/mobile/src/: App.tsx
apps/mobile/src/components/: NoteEditorScreen.tsx  NoteListScreen.tsx  SearchScreen.tsx  SettingsScreen.tsx
apps/mobile/src/stores/: theme.ts  vault.ts
deploy/compose/: docker-compose.prod.yml  docker-compose.yml
deploy/nginx/: ghosttrack.conf
deploy/scripts/: arch-install.sh  auto-update.sh  backup.sh  restore.sh  setup-pi.sh
deploy/systemd/: vaultkeeper-update.service  vaultkeeper-update.timer
docs/: api-contracts.md  arch-linux.md  architecture.md  deployment-checklist.md  pi-setup.md  roadmap.md  tailscale-setup.md
server/: Cargo.toml  Dockerfile
server/src/: db.rs  handlers.rs  main.rs  middleware.rs  models.rs  routes.rs  sync.rs  ws.rs
(+9 files in other folders)
