[package]
name = "vaultkeeper-server"
version = "0.1.0"
edition = "2021"
description = "VaultKeeper sync server for Raspberry Pi"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full", "request-id", "util"] }
tower_governor = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
argon2 = "0.5"
jsonwebtoken = "9"
dotenvy = "0.15"
futures = "0.3"
thiserror = "2"
anyhow = "1"
walkdir = "2"
notify = "6"

[dev-dependencies]
axum-test = "16"
reqwest = { version = "0.12", features = ["json"] }
