[package]
name = "vaultkeeper-desktop"
version = "0.1.0"
description = "VaultKeeper - Local-first encrypted knowledge management"
authors = ["VaultKeeper"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "6"
notify-debouncer-mini = "0.4"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tauri-build = "2"
